# guillotine

./: Cargo.toml  README.md  TODO
res/: main_window.glade
src/: app.rs  backend.rs  error.rs  main.rs  types.rs  util.rs  widgets.rs
