[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "guillotine"
version = "0.1.0"
[dependencies]
gdk-pixbuf = "0.2.0"
gio = "0.2.0"
regex = "0.2.2"
reqwest = "0.7.3"
secret-service = "0.4.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
url = "1.5.1"
xdg = "2.1.0"

[dependencies.gtk]
features = ["v3_22"]
version = "0.2.0"
